bin_SCRIPTS = tntnet-project

nobase_dist_pkgdata_DATA = \
	template/classic-module/configure.ac \
	template/classic-module/log.properties \
	template/classic-module/m4/ax_check_compile_flag.m4 \
	template/classic-module/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/classic-module/Makefile.am \
	template/classic-module/@PROJECT@.ecpp \
	template/classic-module/resources/@PROJECT@.css \
	template/classic-module/tntnet.xml \
	template/classic-standalone/configure.ac \
	template/classic-standalone/log.properties \
	template/classic-standalone/m4/ax_check_compile_flag.m4 \
	template/classic-standalone/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/classic-standalone/main.cpp \
	template/classic-standalone/Makefile.am \
	template/classic-standalone/@PROJECT@.ecpp \
	template/classic-standalone/resources/@PROJECT@.css \
	template/mvc-module/ax_check_compile_flag.m4 \
	template/mvc-module/configure.ac \
	template/mvc-module/controller/index.ecpp \
	template/mvc-module/m4/ax_check_compile_flag.m4 \
	template/mvc-module/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/mvc-module/Makefile.am \
	template/mvc-module/model/index.ecpp \
	template/mvc-module/resources/@PROJECT@.css \
	template/mvc-module/tntnet.xml \
	template/mvc-module/view/index.ecpp \
	template/mvc-module/webmain.ecpp \
	template/mvc-standalone/action.ecpp \
	template/mvc-standalone/actionmain.ecpp \
	template/mvc-standalone/action/myaction.ecpp \
	template/mvc-standalone/action/README \
	template/mvc-standalone/actionreply.h \
	template/mvc-standalone/configuration.cpp \
	template/mvc-standalone/configuration.h \
	template/mvc-standalone/configure.ac \
	template/mvc-standalone/controller/index.ecpp \
	template/mvc-standalone/html/README \
	template/mvc-standalone/json/example.ecpp \
	template/mvc-standalone/json/README \
	template/mvc-standalone/m4/ax_check_compile_flag.m4 \
	template/mvc-standalone/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/mvc-standalone/main.cpp \
	template/mvc-standalone/Makefile.am \
	template/mvc-standalone/model/index.ecpp \
	template/mvc-standalone/noty.h \
	template/mvc-standalone/@PROJECT@.xml \
	template/mvc-standalone/README.md \
	template/mvc-standalone/resources/js/jquery-2.1.4.min.js \
	template/mvc-standalone/resources/js/noty/jquery.noty.js \
	template/mvc-standalone/resources/js/noty/layouts/bottomCenter.js \
	template/mvc-standalone/resources/js/noty/layouts/bottom.js \
	template/mvc-standalone/resources/js/noty/layouts/bottomLeft.js \
	template/mvc-standalone/resources/js/noty/layouts/bottomRight.js \
	template/mvc-standalone/resources/js/noty/layouts/center.js \
	template/mvc-standalone/resources/js/noty/layouts/centerLeft.js \
	template/mvc-standalone/resources/js/noty/layouts/centerRight.js \
	template/mvc-standalone/resources/js/noty/layouts/inline.js \
	template/mvc-standalone/resources/js/noty/layouts/topCenter.js \
	template/mvc-standalone/resources/js/noty/layouts/top.js \
	template/mvc-standalone/resources/js/noty/layouts/topLeft.js \
	template/mvc-standalone/resources/js/noty/layouts/topRight.js \
	template/mvc-standalone/resources/js/noty/packaged/jquery.noty.packaged.js \
	template/mvc-standalone/resources/js/noty/packaged/jquery.noty.packaged.min.js \
	template/mvc-standalone/resources/js/noty/promise.js \
	template/mvc-standalone/resources/js/noty/themes/bootstrap.js \
	template/mvc-standalone/resources/js/noty/themes/default.js \
	template/mvc-standalone/resources/js/noty/themes/relax.js \
	template/mvc-standalone/resources/js/tntnet.js \
	template/mvc-standalone/resources/myapp.css \
	template/mvc-standalone/resources/mypage.js \
	template/mvc-standalone/resources/@PROJECT@.css \
	template/mvc-standalone/session.ecpp \
	template/mvc-standalone/view/index.ecpp \
	template/mvc-standalone/view/mypage.ecpp \
	template/mvc-standalone/webmain.ecpp \
    template/webapp-standalone/resources/app/actions.js \
    template/webapp-standalone/resources/app/json.js \
    template/webapp-standalone/resources/app/main.js \
    template/webapp-standalone/resources/app/dbaccess.js \
    template/webapp-standalone/resources/app/dbinsert.js \
    template/webapp-standalone/resources/css/noty/themes/nest.css \
    template/webapp-standalone/resources/css/noty/themes/relax.css \
    template/webapp-standalone/resources/css/noty/themes/mint.css \
    template/webapp-standalone/resources/css/noty/themes/semanticui.css \
    template/webapp-standalone/resources/css/noty/themes/light.css \
    template/webapp-standalone/resources/css/noty/themes/metroui.css \
    template/webapp-standalone/resources/css/noty/themes/sunset.css \
    template/webapp-standalone/resources/css/noty/themes/bootstrap-v4.css \
    template/webapp-standalone/resources/css/noty/themes/bootstrap-v3.css \
    template/webapp-standalone/resources/css/@PROJECT@.css \
    template/webapp-standalone/resources/css/statusbar.css \
    template/webapp-standalone/resources/css/noty.css.map \
    template/webapp-standalone/resources/css/noty.css \
    template/webapp-standalone/resources/css/dropdown.css \
    template/webapp-standalone/resources/html/json.html \
    template/webapp-standalone/resources/html/dbaccess.html \
    template/webapp-standalone/resources/html/dbinsert.html \
    template/webapp-standalone/resources/html/actions.html \
    template/webapp-standalone/resources/js/require.js \
    template/webapp-standalone/resources/js/main.js \
    template/webapp-standalone/resources/js/jquery-3.3.1.min.js \
    template/webapp-standalone/resources/js/noty.min.js \
    template/webapp-standalone/resources/js/tntnet.js \
    template/webapp-standalone/resources/js/noty.js \
    template/webapp-standalone/webmain.ecpp \
    template/webapp-standalone/json/getnumbers.ecpp \
    template/webapp-standalone/json/example.ecpp \
    template/webapp-standalone/json/dbaccess.ecpp \
    template/webapp-standalone/json/README \
    template/webapp-standalone/include/actionreply.h \
    template/webapp-standalone/include/@PROJECT@/config.h \
    template/webapp-standalone/include/noty.h \
    template/webapp-standalone/@PROJECT@.xml \
    template/webapp-standalone/src/main.cpp \
    template/webapp-standalone/src/@PROJECT@/config.cpp \
    template/webapp-standalone/Makefile.am \
    template/webapp-standalone/action.ecpp \
    template/webapp-standalone/m4/ax_cxx_compile_stdcxx_11.m4 \
    template/webapp-standalone/m4/ax_check_compile_flag.m4 \
    template/webapp-standalone/action/README \
    template/webapp-standalone/action/myaction.cpp \
    template/webapp-standalone/action/insertdata.ecpp \
    template/webapp-standalone/action/myaction.ecpp \
    template/webapp-standalone/configure.ac \
    template/webapp-standalone/log.properties \
    template/webapp-standalone/test.sql \
    template/webapp-standalone/actionmain.ecpp
