bin_SCRIPTS = tntnet-project

nobase_dist_pkgdata_DATA = \
	template/module/resources/@PROJECT@.css \
	template/module/Makefile.am \
	template/module/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/module/m4/ax_check_compile_flag.m4 \
	template/module/tntnet.xml \
	template/module/configure.ac \
	template/module/log.properties \
	template/module/@PROJECT@.ecpp \
	template/default/resources/@PROJECT@.css \
	template/default/README.md \
	template/default/main.cpp \
	template/default/Makefile.am \
	template/default/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/default/m4/ax_check_compile_flag.m4 \
	template/default/configure.ac \
	template/default/@PROJECT@.ecpp \
	template/default/@PROJECT@.xml \
	template/webapp/resources/app/actions.js \
	template/webapp/resources/app/json.js \
	template/webapp/resources/app/main.js \
	template/webapp/resources/app/dbaccess.js \
	template/webapp/resources/app/dbinsert.js \
	template/webapp/resources/css/noty/themes/nest.css \
	template/webapp/resources/css/noty/themes/relax.css \
	template/webapp/resources/css/noty/themes/mint.css \
	template/webapp/resources/css/noty/themes/semanticui.css \
	template/webapp/resources/css/noty/themes/light.css \
	template/webapp/resources/css/noty/themes/metroui.css \
	template/webapp/resources/css/noty/themes/sunset.css \
	template/webapp/resources/css/noty/themes/bootstrap-v4.css \
	template/webapp/resources/css/noty/themes/bootstrap-v3.css \
	template/webapp/resources/css/@PROJECT@.css \
	template/webapp/resources/css/statusbar.css \
	template/webapp/resources/css/noty.css.map \
	template/webapp/resources/css/noty.css \
	template/webapp/resources/css/dropdown.css \
	template/webapp/resources/html/json.html \
	template/webapp/resources/html/dbaccess.html \
	template/webapp/resources/html/dbinsert.html \
	template/webapp/resources/html/actions.html \
	template/webapp/resources/js/require.js \
	template/webapp/resources/js/main.js \
	template/webapp/resources/js/jquery-3.3.1.min.js \
	template/webapp/resources/js/noty.min.js \
	template/webapp/resources/js/tntnet.js \
	template/webapp/resources/js/noty.js \
	template/webapp/webmain.ecpp \
	template/webapp/json/getnumbers.ecpp \
	template/webapp/json/example.ecpp \
	template/webapp/json/dbaccess.ecpp \
	template/webapp/json/README \
	template/webapp/include/actionreply.h \
	template/webapp/include/@PROJECT@/config.h \
	template/webapp/include/noty.h \
	template/webapp/@PROJECT@.xml \
	template/webapp/src/main.cpp \
	template/webapp/src/@PROJECT@/config.cpp \
	template/webapp/Makefile.am \
	template/webapp/action.ecpp \
	template/webapp/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/webapp/m4/ax_check_compile_flag.m4 \
	template/webapp/action/README \
	template/webapp/action/myaction.cpp \
	template/webapp/action/insertdata.ecpp \
	template/webapp/action/myaction.ecpp \
	template/webapp/configure.ac \
	template/webapp/log.properties \
	template/webapp/test.sql \
	template/webapp/actionmain.ecpp \
	template/mvc/resources/@PROJECT@.css \
	template/mvc/resources/mypage.js \
	template/mvc/resources/js/noty/jquery.noty.js \
	template/mvc/resources/js/noty/packaged/jquery.noty.packaged.min.js \
	template/mvc/resources/js/noty/packaged/jquery.noty.packaged.js \
	template/mvc/resources/js/noty/layouts/centerRight.js \
	template/mvc/resources/js/noty/layouts/bottom.js \
	template/mvc/resources/js/noty/layouts/top.js \
	template/mvc/resources/js/noty/layouts/topCenter.js \
	template/mvc/resources/js/noty/layouts/topLeft.js \
	template/mvc/resources/js/noty/layouts/bottomLeft.js \
	template/mvc/resources/js/noty/layouts/bottomRight.js \
	template/mvc/resources/js/noty/layouts/topRight.js \
	template/mvc/resources/js/noty/layouts/bottomCenter.js \
	template/mvc/resources/js/noty/layouts/inline.js \
	template/mvc/resources/js/noty/layouts/centerLeft.js \
	template/mvc/resources/js/noty/layouts/center.js \
	template/mvc/resources/js/noty/promise.js \
	template/mvc/resources/js/noty/themes/relax.js \
	template/mvc/resources/js/noty/themes/bootstrap.js \
	template/mvc/resources/js/noty/themes/default.js \
	template/mvc/resources/js/tntnet.js \
	template/mvc/resources/js/jquery-3.3.1.min.js \
	template/mvc/resources/myapp.css \
	template/mvc/README.md \
	template/mvc/webmain.ecpp \
	template/mvc/json/example.ecpp \
	template/mvc/json/README \
	template/mvc/main.cpp \
	template/mvc/model/index.ecpp \
	template/mvc/html/README \
	template/mvc/@PROJECT@.xml \
	template/mvc/configuration.h \
	template/mvc/actionreply.h \
	template/mvc/Makefile.am \
	template/mvc/controller/index.ecpp \
	template/mvc/action.ecpp \
	template/mvc/m4/ax_cxx_compile_stdcxx_11.m4 \
	template/mvc/m4/ax_check_compile_flag.m4 \
	template/mvc/action/README \
	template/mvc/action/myaction.ecpp \
	template/mvc/noty.h \
	template/mvc/session.ecpp \
	template/mvc/configuration.cpp \
	template/mvc/configure.ac \
	template/mvc/view/mypage.ecpp \
	template/mvc/view/index.ecpp \
	template/mvc/actionmain.ecpp
