AC_INIT(seweb, 0.1, [Tommi Maekitalo <tommi@tntnet.org>])
AM_INIT_AUTOMAKE

abi_current=0
abi_revision=0
abi_age=0
sonumber=${abi_current}:${abi_revision}:${abi_age}
AC_SUBST(sonumber)

AC_CONFIG_HEADERS([lib/config.h])
AC_CONFIG_SRCDIR([lib/veranstaltung.cpp])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX
AC_PROG_LIBTOOL

AC_LANG(C++)
ACX_PTHREAD

AC_ARG_WITH([dburl],
    AS_HELP_STRING([--with-dburl=dburl], [set database url (default: postgresql:dbname=seweb)]),
    [DBURL=$withval],
    [DBURL=postgresql:dbname=seweb])
AC_SUBST(DBURL)

AC_CHECK_HEADER([cxxtools/net/tcpstream.h], , AC_MSG_ERROR([cxxtools headers not found]))
AC_CHECK_HEADER([tnt/tntnet.h], , AC_MSG_ERROR([tntnet headers not found]))
AC_CHECK_HEADER([tntdb/value.h], , AC_MSG_ERROR([tntdb headers not found]))
AC_CHECK_PROGS(ECPPC, [ecppc])

AC_CONFIG_FILES([
    Makefile
    lib/Makefile
    app/Makefile
    web/Makefile
    etc/Makefile
    jquery/Makefile
    ])

AC_OUTPUT
